xreadthedocs/css/theme_extra.css
/*
 * Tweak the overal size to better match RTD.
 */
body {
    font-size: 90%;
}

h3, h4, h5, h6 {
    color: #2980b9;
    font-weight: 300
}

/*
 * Sphinx doesn't have support for section dividers like we do in
 * MkDocs, this styles the section titles in the nav
 *
 * https://github.com/mkdocs/mkdocs/issues/175
 */
.wy-menu-vertical span {
    line-height: 18px;
    padding: 0.4045em 1.618em;
    display: block;
    position: relative;
    font-size: 90%;
    color: #838383;
}

.wy-menu-vertical .subnav a {
    padding: 0.4045em 2.427em;
}

/*
 * Long navigations run off the bottom of the screen as the nav
 * area doesn't scroll.
 *
 * https://github.com/mkdocs/mkdocs/pull/202
 */
.wy-nav-side {
    height: 100%;
    overflow-y: auto;
}

/*
 * readthedocs theme hides nav items when the window height is
 * too small to contain them.
 *
 * https://github.com/mkdocs/mkdocs/issues/#348
 */
.wy-menu-vertical ul {
  margin-bottom: 2em;
}

/*
 * Fix wrapping in the code highlighting
 *
 * https://github.com/mkdocs/mkdocs/issues/233
 */
code {
    white-space: pre;
}

/*
 * Wrap inline code samples otherwise they shoot of the side and
 * can't be read at all.
 *
 * https://github.com/mkdocs/mkdocs/issues/313
 */
p code {
    word-wrap: break-word;
}

/*
 * The CSS classes from highlight.js seem to clash with the
 * ReadTheDocs theme causing some code to be incorrectly made
 * bold and italic.
 *
 * https://github.com/mkdocs/mkdocs/issues/411
 */
code.cs, code.c {
    font-weight: inherit;
    font-style: inherit;
}

/*
 * Fix some issues with the theme and non-highlighted code
 * samples. Without and highlighting styles attached the
 * formatting is broken.
 *
 * https://github.com/mkdocs/mkdocs/issues/319
 */
.no-highlight {
  display: block;
  padding: 0.5em;
  color: #333;
}


/*
 * Additions specific to the search functionality provided by MkDocs
 */

#mkdocs-search-results article h3
{
    margin-top: 23px;
    border-top: 1px solid #E1E4E5;
    padding-top: 24px;
}

#mkdocs-search-results article:first-child h3 {
    border-top: none;
}

#mkdocs-search-query{
    width: 100%;
    border-radius: 50px;
    padding: 6px 12px;
    border-color: #D1D4D5;
}

.wy-menu-vertical li ul {
    display: inherit;
}

.wy-menu-vertical li ul.subnav ul.subnav{
    padding-left: 1em;
}


.wy-side-nav-search {
    background-color: #343131 !important;
}

.wy-nav-top {
	background-color: #343131 !important;
}

.wy-side-nav-search a {
	margin-bottom: 0;
}

a.site-title {
	font-size: 200%;
}
/* Base16 Eighties Colorscheme by Chris Kempson (http://chriskempson.com) */
/* CSS from https://github.com/htdvisser/hugo-base16-theme */
.base00 { color: #2d2d2d; }
.base01 { color: #393939; }
.base02 { color: #515151; }
.base03 { color: #747369; }
.base04 { color: #a09f93; }
.base05 { color: #d3d0c8; }
.base06 { color: #e8e6df; }
.base07 { color: #f2f0ec; }
.base08 { color: #f2777a; }
.base09 { color: #f99157; }
.base0a { color: #ffcc66; }
.base0b { color: #99cc99; }
.base0c { color: #66cccc; }
.base0d { color: #6699cc; }
.base0e { color: #cc99cc; }
.base0f { color: #d27b53; }


div.builtwith a {
	color: #aaa;
}

.rst-versions .rst-current-version {
	text-align: center;
	padding-top: 0;
}

.rst-versions .rst-current-version a {
	margin-right: 10px;
}
.fa-github:before, .icon-github:before {
	font-size: 30px;
	position: relative;
	bottom: -6px;
	margin-right: 8px;
}

div.logo {
	text-align: center;
	padding: 10px;
}

div.logo img {
	width: 236px;
}

nav.wy-nav-top img {
	height: auto;
	width: auto;
	background-color: transparent;
	border-radius: 0;
}

nav.wy-nav-top i {
	font-size: 60px;
}

/* Inline code */
code {
	color: #333;
}

/* Code block */
pre code {
  display: block;
  overflow-x: auto;
  padding: 0.5em;
  -webkit-text-size-adjust: none;
}

